Escape curly braces in URL
Escape curly braces in download products URL